# a2_ros

./: .dockerignore  .gitignore  README.md  compose.yaml
.github/workflows/: docker-publish.yaml
config/record/: robot.yaml
docs/: archive.md
environment/: Dockerfile.dev
environment/colcon/: robot.defaults.yaml  sim.defaults.yaml
environment/shell/: .bashrc
scripts/: a2  a2_shell.sh  build_workspace.sh
scripts/pc2/: pc2_joy.sh
src/cmd_vel_twist_pub/: CMakeLists.txt  package.xml
src/cmd_vel_twist_pub/src/: twist_publisher.cpp  waypoint_navigator.cpp  waypoint_sequence_navigator.cpp
src/meta_packages/a2_object_detection/: CMakeLists.txt  setup.py
src/meta_packages/a2_object_detection/a2_object_detection/: artifact_memory_node.py
src/meta_packages/a2_pc2/launch/: camera.launch.py  pc2.launch.py
src/meta_packages/a2_ros/config/autonomy/: matterport.yaml  tare_a2.yaml
src/meta_packages/a2_ros/config/resple/: params_a2.yaml
src/meta_packages/a2_ros/launch/: dlio.launch.py  exploration.launch.py  navigation.launch.py  real.launch.py  resple.launch.py  sim.launch.py  teleop_joy.launch.py
src/meta_packages/a2_ros/rviz/: resple.rviz
src/meta_packages/a2_ros/src/: circular_trajectory.cpp
src/terrain_map_accumulator/: CMakeLists.txt  package.xml
src/terrain_map_accumulator/src/: terrain_map_accumulator.cpp
